--- a/.env.local.example
+++ b/.env.local.example
@@ -3,3 +3,6 @@
 
 # Claude Code Configuration
 ANTHROPIC_API_KEY=your_anthropic_api_key_here
+
+# GitHub CLI Configuration
+GH_TOKEN=your_github_token_here
