--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -27,21 +27,23 @@ jobs:
       - name: Build binaries
         run: |
           mkdir -p dist
+          VERSION=${{ steps.get_version.outputs.VERSION }}
+          LDFLAGS="-X main.version=${VERSION}"
 
           # Linux AMD64
-          GOOS=linux GOARCH=amd64 go build -o dist/llmls-linux-amd64 .
+          GOOS=linux GOARCH=amd64 go build -ldflags="${LDFLAGS}" -o dist/llmls-linux-amd64 .
 
           # Linux ARM64
-          GOOS=linux GOARCH=arm64 go build -o dist/llmls-linux-arm64 .
+          GOOS=linux GOARCH=arm64 go build -ldflags="${LDFLAGS}" -o dist/llmls-linux-arm64 .
 
           # macOS AMD64
-          GOOS=darwin GOARCH=amd64 go build -o dist/llmls-darwin-amd64 .
+          GOOS=darwin GOARCH=amd64 go build -ldflags="${LDFLAGS}" -o dist/llmls-darwin-amd64 .
 
           # macOS ARM64 (Apple Silicon)
-          GOOS=darwin GOARCH=arm64 go build -o dist/llmls-darwin-arm64 .
+          GOOS=darwin GOARCH=arm64 go build -ldflags="${LDFLAGS}" -o dist/llmls-darwin-arm64 .
 
           # Windows AMD64
-          GOOS=windows GOARCH=amd64 go build -o dist/llmls-windows-amd64.exe .
+          GOOS=windows GOARCH=amd64 go build -ldflags="${LDFLAGS}" -o dist/llmls-windows-amd64.exe .
 
       - name: Create Release
         env:
